tests/ui/assign_to_val.stderr
Error [E0111]: `x` was made with `val`, so it can't change
  --> tests/ui/assign_to_val.jet:3:5
    |
  3 |     x = 2;
    |     ^
 Why: only `var` bindings (and `mut` parameters) can be changed
 Fix: declare it with `var x = ...` instead
